--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,3 +6,5 @@ set(CMAKE_CXX_STANDARD 17)
 add_library(gl++ src/vertex_buffer.cpp src/vertex_array.cpp src/shader.cpp)
 
 target_include_directories(gl++ PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/include)
+
+add_subdirectory(test)
